Version 5.0.3, May 6, 2021

    * (24) bug fix: GB_PUBLIC added to the new functions in GraphBLAS.h

Version 5.0.2, May 5, 2021

    * GrB_Matrix_reduce_BinaryOp: removed.  Use a monoid instead, with
        GrB_reduce or GrB_Matrix_reduce_Monoid.
    * (23) bug fix: GrB_Matrix_apply_BinaryOp1st and 2nd were using the
        wrong descriptors for GrB_INP0 and GrB_INP1. Caught by Erik Welch,
        Anaconda.
    * memory pool added for faster memory allocation
    * calloc no longer used: using malloc+memset(0) instead
    * realloc option: if not available, uses malloc+memcpy+free
    * @GrB MATLAB interface ported to MATLAB R2021a.
    * GxB_Matrix_diag: construct a diagonal matrix from a vector
    * GxB_Vector_diag: extract a diagonal from a matrix
    * concat/split: added methods to concatenate and split matrices
    * import/export: size of arrays now in bytes, not entries.
        A new parameter, is_uniform, has been added to all import/export
        methods, which indicates that the matrix values are all the same.
    * (22) bug fix: SIMD vectorization was missing reduction(+,task_cnvals)
        in GB_dense_subassign_06d_template.c.  Caught by Jeff Huang, Texas A&M,
        with his software package for race-condition detection.

Version 4.0.3, Jan 19, 2021

    * faster min/max monoids
    * MATLAB: G=GrB(G) converts G from v3 object to v4

Version 4.0.2, Jan 11, 2021

    * added ability to load *.mat files saved with GraphBLAS v3.
    * GrB_wait: added #pragma omp flush after any GrB_wait

Version 4.0.1, Jan 4, 2021

    * substantial performance gains: compared with v3.3.3: up to 5x faster in
        BFS (with LAGraph_bfs_parent2), 2x faster in Betweeness-Centrality (in
        LAgraph_bc_bactch5); BC now faster than GAP for kron, urand, and
        twitter (the 3 largest matrices in the GAP benchmark).
    * GrB_wait(), with no inputs: removed
    * GrB_wait(&object): polymorphic function added